# bigint

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: bigint.h  tests.h  types.h
src/: bigint_arithmetic.c  bigint_utils.c
test/: bigint_add.c  bigint_and.c  bigint_compare.c  bigint_multiply.c  bigint_not.c  bigint_or.c  bigint_shift_left.c  bigint_shift_right.c  bigint_subtract.c  bigint_xor.c  test.c  test.h
test-generator/: main.py
test-generator/core/: gen.py  templates.py
